# google-functionregistry

./: pyproject.toml
google_functionregistry/: __init__.py  client.py  tool_registry.py
